--- a/BarmenShop/appsettings.json
+++ b/BarmenShop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=Barmen;User Id=postgres;Password=ffGG44rus;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=Barmen;User Id=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
